[FIX] - 1st section spacing

--- a/css/style.css
+++ b/css/style.css
@@ -181,17 +181,13 @@ textarea {
 
     opacity: .9;
 
-    max-width: 305px;
-
-
     font-size: 30px;
   }
   
   .section-1 h2 {
     font-weight: 500;
-    margin-bottom: 30px;
+    margin-bottom: 65px;
     letter-spacing: 2px;
-    max-width: 370px;
 
     opacity: .9;
 
@@ -205,7 +201,7 @@ textarea {
   }
   
   .section-1 p {
-    margin-bottom: 22px;
+    margin-bottom: 45px;
 
     font-size: 15px;
   }
@@ -220,7 +216,7 @@ textarea {
   }
   
   .section-1 ul li:not(:last-child) {
-    margin-bottom: 15px;
+    margin-bottom: 22px;
   }
 }
 
